--- a/score_template.html
+++ b/score_template.html
@@ -1,20 +1,22 @@
 
+<!DOCTYPE html>
 <html>
-         <head>
-                   <title>Score Game</title>
-         </head>
-         <body>
-                   <h1>The score is:</h1>
-                   <dic id=“score”>{SCORE}</div>
-        </body>
+    <head>
+        <title>Score Game</title>
+    </head>
+    <body>
+        <h1>The score is:</h1>
+        <div id="score">{SCORE}</div>
+    </body>
 </html>
 
+<!DOCTYPE html>
 <html>
-         <head>
-                    <title>Scores Game</title>
-         </head>
-         </body>
-                   <h1>ERROR:</h1>
-                   <div id=“score” style=“color:red”>{ERROR}</div
-          </body>
+    <head>
+        <title>Scores Game</title>
+    </head>
+    <body>
+        <h1>ERROR:</h1>
+        <div id="score" style="color:red">{ERROR}</div>
+    </body>
 </html>
